== 3030-12-31 Getting Started
<p>If you're new to Constellation, read the <a href="" helpId="au.gov.asd.tac.constellation.functionality.gettingstarted">getting started guide</a>.</p>

== 2022-08-03 Layers View
<p>Layers View has had a complete UI rework and is now available under the Views menu.</p>
<p>Layers View allows you to add vertices and transactions to up to 32 layers by either using the right click context menu or defining a query.</p>
<p>The view allows for toggling of layers via a checkbox which links to subsets of graph elements.
This will either hide or show the subsets based on element visibility changes to reduce clutter when analysing large data sets.</p>

== 2022-07-28 Clear Button in Database Importer
<p>The "Import from Database" pane now has a clear button next to the query button. Clicking Clear will clear the results in the current run and will clear the query text</p>

== 2022-07-19 Import Graph File
<p>A new plugin "Import Graph File" has been added to the Import section of Data Access View. This allows you to import data from graph file types such as GML, GraphML, and Pajek.</p>

== 2022-06-17 Datetime Formatter
<p>The Datetime formatter for attributes in the File Importer and Database Importer has been updated to include a new field 'Display Time Zone'. This field allows you to easily convert your datetime data to the desired timezone before importing.</p>

== 2022-05-27 Option to specify time zone in Importers
<p>A new field 'Time Zone' is added in the Datetime formatter of attributes in the File Importer and Database Importer. You can find it by right-clicking an attribute, navigating to Formatter -&gt; Datetime. Choosing 'EPOCH' as the Datetime format or entering a format that already contains a time zone will disable this field.</p>

== 2022-04-13 Plugins
<p>Some plugin parameters have been updated to have '*' at the end of the name to indicate that the plugin will require a value in order for the plugin to work.</p>
